Pages 30-61 Updated to Past Tense using ChatGPT

--- a/admin-content/milestones.tex
+++ b/admin-content/milestones.tex
@@ -51,4 +51,4 @@ Senior Design I was a culture shock for the team. Looking back at the eli\textsu
 In Figure \ref{fig:cumulativeflow}: purple designates tasks that are marked unfinished in the the backlog and current sprint, blue represents in progress tasks, and green represents finished tasks.
 
 Throughout Senior Design I we have been gathering research and have started laying out the design of our garden bed and have completed the majority of our part selection. The Figure in \ref{fig:cumulativeflow} may be a little misleading at this point because we have not refined our backlog to fully encapsulate meaningful tasks instead breaking it down into larger subsystem requirement-esque tasks.
-
+%Needs updating for SD2
