--- a/design-constraints/realistic-constraints.tex
+++ b/design-constraints/realistic-constraints.tex
@@ -1,62 +1,54 @@
 \subsection{Constraints}
-The following section nwill cover specific limitations, or constraints, the team has and will face during the project timeline. These restraints have affects on our ability to design specific syst4ems and limits our options when designing different parts of the product. The following are our constraints: economic, time, equipment, safety, environmental, manufacturability, ethical, and sustainability. Each section will discuss possible and realized problems with regard to the specific category of constraint. After explaining and detailing each constraint, we will expolore different solutions that we could use to overcome any barriers. Some problems may not occur for the team, but we want to be prepared for any constraints that may arise. 
+The following section covers specific limitations, or constraints, the team faced during the project timeline. These restraints had affects on our ability to design specific systems and limited our options when designing different parts of the product. The following were our constraints: economic, time, equipment, safety, environmental, manufacturability, ethical, and sustainability. Each section discussed possible and realized problems with regard to the specific category of constraint. After explaining and detailing each constraint, we explored different solutions that we could use to overcome any barriers. Some problems did not occur for the team, but we wanted to be prepared for any constraints that may arise.
 \subsubsection{Economic}
-The first major constraint that we expected and have already begun to face is economic. We considered and looked for different sponsorhip options for this project, but unfortunately our team was unable to secure a sponsorship. Our funding for the project will be entirely self-funded and evenly divided between the four team members. As a result of being funded entirely out-of-pocket, cost has been and will continue to be a driving factor in the materials and components our team decides to use for the product. When analyzing various parts and materials for the product, ideally, we would choose the best available, but when budgeting for both us and the consumers we plan to serve, we plan to maximize specifications and requirements while minimizing the cost. This means our product may not have all the "nice-to-have" features and will instead have features to make it perform just enough to be competitive in the market we are designing the product for.  \\
+The first major constraint that we expected and faced was economic. We considered and looked for different sponsorship options for this project, but unfortunately our team was unable to secure a sponsorship. Our funding for the project was entirely self-funded and evenly divided between the four team members. As a result of being funded entirely out-of-pocket, cost was a driving factor in the materials and components our team decided to use for the product. When analyzing various parts and materials for the product, ideally, we would choose the best available, but when budgeting for both us and the consumers we planned to serve, we planned to maximize specifications and requirements while minimizing the cost. This meant our product may not have had all the "nice-to-have" features and instead had features to make it perform just enough to be competitive in the market we designed the product for.\\
 
-Another hurdle that the economy brings to this project is the availability of certain parts. Manufacturers across the world have been drastically impacted by the economy over the last few years making nvarious products unavailable, hard to get, or more expensive than ever before. We excpect to spend more time comparing components because of lack of availability compared to the pricing of such parts. Lack of availability of certain components will also affect the final outcome of our product because we may not be able to get the exact parts we want as part of our design to meet time requirements for the project.\\
+Another hurdle that the economy brought to this project was the availability of certain parts. Manufacturers across the world had been drastically impacted by the economy over the last few years making various products unavailable, hard to get, or more expensive than ever before. We expected to spend more time comparing components because of lack of availability compared to the pricing of such parts. Lack of availability of certain components also affected the final outcome of our product because we were not able to get the exact parts we wanted as part of our design to meet time requirements for the project.\\
 
-We have run in to the problem of availability with products on multiple occasions. An example of this is when we were looking for charge controllers from the manufacturere Analogue Devices. We were originally looking at the charge controller "Power Tracking 2A Battery Charge for Solar Power (LT3652), but quickly found that it was unavailable. This specific option for a charge controller was an ideal option because of its pricepoint and specifications. Our product only needs 5V to operate so when looking for a component we were looking to meet just about our needs. Our second choice was through TI which had a minimum of 5V and max of 28V, but again ran in to the issue that the component was not available. We are now considering two other options that are more expensive, have higher voltage, and offer other features such as tilemetry, and a low-loss power path that we do not need for our product.
-%to-do: lo-loss power path in last sentence is a trademark. section below this comment is a part of the paragraph above. new paragraph begins with "The side effects"
+We ran into the problem of availability with products on multiple occasions. An example of this was when we were looking for charge controllers from the manufacturer Analog Devices. We were originally looking at the charge controller "Power Tracking 2A Battery Charge for Solar Power (LT3652), but quickly found that it was unavailable. This specific option for a charge controller was an ideal option because of its price point and specifications. Our product only needed 5V to operate so when looking for a component we were looking to meet just about our needs. Our second choice was through TI which had a minimum of 5V and max of 28V, but again ran into the issue that the component was not available. We then considered two other options that were more expensive, had higher voltage, and offered other features such as telemetry, and a low-loss power path that we did not need for our product.\\
 
-Not only are we being forced to select something more than needed, but this will cause future restraints on components remaining in budget and has delayed time because of the extra time spent searching for products available that meet our requirements.\\
+Not only were we forced to select something more than needed, but this caused future restraints on components remaining in budget and delayed time because of the extra time spent searching for products available that met our requirements.\\
 
-The side effects of our budget and product availability in the economy is also affected by the inflation rates. Not only could we run in to the problem of not having a product readily available to meet our needs, but inflation could also cause a component to fall outside of our budget. \\
+The side effects of our budget and product availability in the economy were also affected by the inflation rates. Not only could we run into the problem of not having a product readily available to meet our needs, but inflation could also cause a component to fall outside of our budget. \\
 
-In order to combat this restraint, we have looked at future products we may need and have been considering differnt options ahead of time. This will allow us to plan ahead and order products for future parts of the project now so we do not have to wait on them later. \\
+In order to combat the restraint of time, we looked at future products we might need and considered different options ahead of time. This allowed us to plan ahead and order products for future parts of the project so we wouldn't have to wait on them later.\\
 \subsubsection{Time}
-Most projects share several different constraints. One of the constraints that will be found with every product is the restraint of time. Customers always want the next product and teams need various resources made on a deadline. For this project, we are on a timeline to complete the project, and various iterations, with the semester. Most projects revolve around the deadline that meets a customers' needs. In this case, the project is part of a larger organization that runs through business cycles every year. The deadline in place is imposed by the restructuring of the university as a workforce.\\
+Most projects share several different constraints. One of the constraints that is found with every product is the restraint of time. Customers always want the next product, and teams need various resources made on a deadline. For this project, we were on a timeline to complete the project and various iterations within the semester. Most projects revolve around the deadline that meets a customer's needs. In this case, the project was part of a larger organization that ran through business cycles every year. The deadline in place was imposed by the restructuring of the university as a workforce.\\
 
-Not only is the project restricted on a semesterlyn timeline, but the project also relies on the schedule set forth by the university. We recently experienced a time constraint when a hurricane came through Orlando. Not only did the university close, but some of our team members lost power and were unable to work during this time. Additionally, the university will close over the holidays limiting resources and ability to make some decisions to progress the project. \\
+Not only was the project restricted on a semester timeline, but the project also relied on the schedule set forth by the university. We recently experienced a time constraint when a hurricane came through Orlando. Not only did the university close, but some of our team members lost power and were unable to work during this time. Additionally, the university closed over the holidays, limiting resources and the ability to make some decisions to progress the project.\\
 
-As all parts of this project correlate with each other, so do our restraints. Ealier we discussed that some products have limited, or no, availability, This further pressurizes the time restraint we have because of product delays. We have already been delayed by certain products being available and have polans to look further into our project design to try and avoid further delays with shipping and manufacturing. \\
+As all parts of this project correlated with each other, so did our restraints. Earlier, we discussed that some products had limited or no availability. This further pressurized the time restraint we had because of product delays. We were already delayed by certain products being available and had plans to look further into our project design to try and avoid further delays with shipping and manufacturing.\\
 
-Another factor that affects the timing of our project, is our own availability. Each of our team members have various projects and responsibilities, and we work together to find time that works for everyone on the team. Sometimes our schedules do not align and causes us to push our meetings back a day or two. This is something we have been working around by communicating regularly through Discord even if we have not been able to meet face to face.\\
+Another factor that affected the timing of our project was our own availability. Each of our team members had various projects and responsibilities, and we worked together to find time that worked for everyone on the team. Sometimes our schedules did not align and caused us to push our meetings back a day or two. This was something we worked around by communicating regularly through Discord, even if we were not able to meet face to face.\\
 
-Since we know we have another semester working on this project, we have had more flexibility this semester to move things where needed in our project timeline. The closer we get to the deadline, the less flexibility we will have with our time. Because we recognize this restraint now, we have discussed this topic and allowed for time to make changes in the future by making as much progress now as possible.\\ 
-
+Since we knew we had another semester working on this project, we had more flexibility this semester to move things where needed in our project timeline. The closer we got to the deadline, the less flexibility we had with our time. Because we recognized this restraint early on, we discussed this topic and allowed time to make changes in the future by making as much progress as possible now.\\
 \subsubsection{Equipment}
-There are three main equipment constraints on our ability to produce our project. One is limited access to software, another is heavily shared tools, and the third is having facilities to build.
+There were three main equipment constraints on our ability to produce our project. One was limited access to software, another was heavily shared tools, and the third was having facilities to build.\\
 
-This project arises out of a tradition of problem solving that is used in educational facilities and industries all over the country. A chief part of the College of Engineering and Computer Science program is to teach students to use the tools industry uses to solve the problems industry faces. So far, our team has used multiple integrated development environments, version control platforms, word processers and file viewers, text, video and audio communication services, and software for designing optical beam paths, CAD models of physical structures, and PCB simulations in order to express and determine design features for our project. Each of us has had tools that we would like to have used, but could not, either because of licensing, inexperience, or the need to work cooperatively with the larger team. 
+This project arose out of a tradition of problem-solving that was used in educational facilities and industries all over the country. A chief part of the College of Engineering and Computer Science program was to teach students to use the tools industry used to solve the problems industry faced. So far, our team had used multiple integrated development environments, version control platforms, word processors and file viewers, text, video and audio communication services, and software for designing optical beam paths, CAD models of physical structures, and PCB simulations to express and determine design features for our project. Each of us had tools that we would have liked to have used but could not, either because of licensing, inexperience, or the need to work cooperatively with the larger team.\\
 
-Another equipment constraint has been in the form of shared workspaces. In order to leverage these tools, we need relatively quiet space to sit where we can communicate with each other and run power hungry devices while connected to the internet and organizational networks. Our University has provided us with design labs, but their tools are managed by students, and inventory is often untraceable and disorganized. 
+Another equipment constraint had been in the form of shared workspaces. In order to leverage these tools, we needed relatively quiet space to sit where we could communicate with each other and run power-hungry devices while connected to the internet and organizational networks. Our University had provided us with design labs, but their tools were managed by students, and inventory was often untraceable and disorganized.\\
 
-The third equipment constraint is unique to the nature of this project, but it comes from needing to build outdoors. Building a garden bed requires land, if only a little, and although parts can be fabricated in clean spaces the system is designed to contain wet, heterogeneous dirt. Space outdoors is necessary to build and that means either permission from the University or leveraging team member access to land. 
+The third equipment constraint was unique to the nature of this project, but it came from needing to build outdoors. Building a garden bed required land, if only a little, and although parts could be fabricated in clean spaces the system was designed to contain wet, heterogeneous dirt. Space outdoors was necessary to build and that meant either permission from the University or leveraging team member access to land.\\
 
-Each of these equipment constraints has a different effect on the project, some of them are easy to get around, by finding open source alternatives to licensed software, by cooperating with other students to get more out of leftover optical components, and by using student networks to determine where and when our group will have space to meet. Some are more difficult, causing us to trade time and money that we would rather not have had to give. In the end, equipment constraints will not likely impact the project deadline or affect the features as laid out in the document.
-
+Each of these equipment constraints had a different effect on the project, some of them were easy to get around by finding open-source alternatives to licensed software, by cooperating with other students to get more out of leftover optical components, and by using student networks to determine where and when our group would have space to meet. Some were more difficult, causing us to trade time and money that we would have rather not given. In the end, equipment constraints did not likely impact the project deadline or affect the features as laid out in the document.\\
 \subsubsection{Safety}
-This project features several threats to human safety that must be addressed. The power subsystem is rated with sufficiently high voltage and current to cause cardiac arrest. The user must be protected from direct exposure to electrical conductors within the system, especially as this is an outdoor system with water management mechanisms which may add to the risk. The optical subsystem involves the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps must be taken to indicate the nature of the threat where it exists. Other risks involved in the project include the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project must be sufficiently dull to ensure against the possibility of this. \\
+This project featured several threats to human safety that needed to be addressed. The power subsystem was rated with sufficiently high voltage and current to cause cardiac arrest. The user had to be protected from direct exposure to electrical conductors within the system, especially as this was an outdoor system with water management mechanisms which could add to the risk. The optical subsystem involved the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps had to be taken to indicate the nature of the threat where it existed. Other risks involved in the project included the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project had to be sufficiently dull to ensure against the possibility of this.\\
 
-Recognizing the improtance of our team's safety now allows us to think through different precautions we can take when building and testing the product. One precaution our team plans to utilize is personal protection equipment and understanding the tools we will utilize. We will also ensure that we are using proper tools for different jobs. We will discuss as a team with each other to know what tools we have and potential items needed to purchase to ensure we have the right equipment for the job. Taking inventory of this now will also allow us to budget any tools in as needed. We will also plan accordingly on when to bring professionals in for various needs. For example, no one on our team is trained to cut and bend the garden materials on the extorior so we plan to utilize campus resources and personal connections to ensure we get the job done correctly and safely. \\
-
+Recognizing the importance of our team's safety allowed us to think through different precautions we could take when building and testing the product. One precaution our team planned to utilize was personal protection equipment and understanding the tools we would utilize. We also ensured that we used proper tools for different jobs. We discussed as a team with each other to know what tools we had and potential items needed to purchase to ensure we had the right equipment for the job. Taking inventory of this also allowed us to budget any tools in as needed. We also planned accordingly on when to bring professionals in for various needs. For example, no one on our team was trained to cut and bend the garden materials on the exterior so we planned to utilize campus resources and personal connections to ensure we got the job done correctly and safely.\\
 \subsubsection{Environmental}
-Our product features our consumers utilizing a garden bed which directly engages with the environment. Because our product is doing this, there are environmental factors that our team must consider. Although we are not directly pouring soil into each customer's garden bed, we know that different fertilizers will be purchased and used to fill our products. This has potential of disturbing ecosystems, even if it was through the butterfly effect. Additionally, we will need to consider the risk of pollution our batteries and materials cause on the environment. When we discuss the marketing requirements, we also consider the environmental impact because we know our consumers will care about this factor. We also have to consider the fertilizer runoof, sound pollution, and light pollution that could occur as a result of our project.\\
+Our product featured consumers utilizing a garden bed which directly engaged with the environment. Because our product was doing this, there were environmental factors that our team had to consider. Although we were not directly pouring soil into each customer's garden bed, we knew that different fertilizers would be purchased and used to fill our products. This had the potential to disturb ecosystems, even if it was through the butterfly effect. Additionally, we needed to consider the risk of pollution our batteries and materials caused on the environment. When we discussed the marketing requirements, we also considered the environmental impact because we knew our consumers would care about this factor. We also had to consider the fertilizer runoff, sound pollution, and light pollution that could occur as a result of our project.\\
 
-To consider the impact we could have on the economy, we are also taking careful consideration in the components and materials we will use for our product. The component that will have one of the larger impacts on this rest5raint is our battery. Many of the other components and parts can be re-used, but batteries do not have the same type of use after the product is retired. This is also a reason we decided to make our product solar. We want it to last as long as possible and use less energy where it can. Not only are we considering performance standards of various components, but also the lasting impact these aprts will have on our environment for years following. The logner we can make our product last and the better, the less that will negatively impact the environment. 
-
-
+To consider the impact we could have on the economy, we also took careful consideration in the components and materials we used for our product. The component that had one of the larger impacts on this restraint was our battery. Many of the other components and parts could be re-used, but batteries did not have the same type of use after the product was retired. This was also a reason we decided to make our product solar. We wanted it to last as long as possible and use less energy where it could. Not only did we consider performance standards of various components, but also the lasting impact these parts would have on our environment for years following. The longer we could make our product last and the better, the less it would negatively impact the environment.\\
 \subsubsection{Manufacturability}
-Manufacturability is a set of important criteria for early in the design process to avoid making costly mistakes. When originally selecting our project, we wanted to make sure that whatever project we selected would be achievable and able to be built. For this project, we had to ensure that building the garden bed would be something feasible for our team and the resources we had available to us. We considered the two reasons that could cause a product to potentially not be manufacturable. The first one is that the design is too complex to be completed. This could be caused by any number of reasons within the design. We considered all the other constraints that have been discussed and whether those constraints would further constrain nthe manufacturability of the garden bed. The second reason relates back to the cost restraint. We had to budget and determine if we would be able to fund all the requirements to build out the entire product, and account for variability. \\
+Manufacturability was a set of important criteria early in the design process to avoid making costly mistakes. When we originally selected our project, we wanted to make sure that whatever project we chose would be achievable and able to be built. For this project, we had to ensure that building the garden bed would be feasible for our team and the resources we had available. We considered the two reasons that could cause a product to potentially not be manufacturable. The first one was that the design was too complex to be completed, which could be caused by any number of reasons within the design. We considered all the other constraints that had been discussed and whether those constraints would further constrain the manufacturability of the garden bed. The second reason related back to the cost restraint, and we had to budget and determine if we would be able to fund all the requirements to build out the entire product and account for variability.\\
 
-Our team has protected against cost prohibitive manufacturability issues by ensuring that our component selection is traceable and that each component is in production and within our price range at cost, not due to clearance discounts. Another step our team is taking against future constraints is selecting the bulk of our components and design features before taking steps toward production.  
-
+Our team protected against cost-prohibitive manufacturability issues by ensuring that our component selection was traceable and that each component was in production and within our price range at cost, not due to clearance discounts. Another step our team took against future constraints was selecting the bulk of our components and design features before taking steps toward production.\\
 \subsubsection{Ethical}
-When considering the ethics behind any project, this project made our ethical constraint easier. We know that the negative impact will be outweighed by the positives our design brings to any market. Not only does our product encourage consumers to grow their own vegetables, or plants, it will also bring a mindfulness to many lives. There are countless studies that show the benefits of being outside and tending to a garden, and this project enables that behavior. Our garden bed will encourage age old activities that do not threaten the well being of the user or the surrounding community. Our project is designed to accommodate and minimize its environmental impact. Beyond the environmental ethics, we also considered user data and security of the product. Because of the wireless communication system we are designing and the information it needs to work, we have drastically limited security risks for the consumer and surrounding neighbors. There is also minimal room for any harm to come to the consumers. Consumers that engage with the product will not be able to use it to harm others, knowindly or unknowingly. The product is also open to any consumer to utilize and does not risk damaging ay cultural heritage or societies. The garden bed can be used by anyone who decides to purchase it.  Our team commits to submit to University policy as regards the goals and activities of this project.
-
+When considering the ethics behind the project, the team found it easier to meet the ethical constraint. They knew that the positive impact of the project would outweigh any negative impact it might have on the market. The project would not only encourage consumers to grow their own vegetables and plants, but it would also bring mindfulness to many lives. The team was aware of numerous studies that showed the benefits of being outside and tending to a garden, and this project would enable that behavior. The garden bed was designed to minimize its environmental impact, and the team considered user data and security of the product. They limited security risks for the consumer and surrounding neighbors due to the wireless communication system they were designing and the information it needed to work. There was minimal room for any harm to come to the consumers. The product was also open to any consumer to utilize and did not risk damaging any cultural heritage or societies. The garden bed could be used by anyone who decided to purchase it. The team committed to submitting to University policy as regards the goals and activities of this project.\\
 \subsubsection{Sustainability}
-Sustainability means creating a system that will produce as much of the resources as it uses so that the system does not collapse. An example of this is when we were deciding what materials to make the structure out of. We wanted to maximize life of the product without hindering our budget. We found that aluminum meets several consumer requirements, as well as our other project restraints. Aluminum is also more sustainable than some other materials, such as wood, that were involved in the discussion. Another point for sustainability that we have considered is both battery life and the life of the solar panels. We want to find a balance between the life and cost of these components. Additionally, we hope to have them integrated in a way that when they need to be replaced, the consumer is not forced to replace the entire product, but only the ones that are beyond their useful life. \\
+Sustainability meant creating a system that would produce as much of the resources as it used so that the system did not collapse. An example of this was when we were deciding what materials to make the structure out of. We wanted to maximize the life of the product without hindering our budget. We found that aluminum met several consumer requirements, as well as our other project restraints. Aluminum was also more sustainable than some other materials, such as wood, that were involved in the discussion. Another point for sustainability that we had considered was both battery life and the life of the solar panels. We wanted to find a balance between the life and cost of these components. Additionally, we hoped to have them integrated in a way that when they needed to be replaced, the consumer was not forced to replace the entire product, but only the ones that were beyond their useful life.\\
 
-Beyond product life sustainability, we also considered other factors. The power generation subsystem is intended to ensure that our system does not need to draw on the power grid in order to function correctly. This will lower the impact on both the environment and how well the product can sustain itself. We also considered the water detection to ensure accuracy so that water is not wasted. The sensors and system will minimize water waste by only watering when needed and at appropriate times before or after sunshine. \\
+Beyond product life sustainability, we had also considered other factors. The power generation subsystem was intended to ensure that our system did not need to draw on the power grid in order to function correctly. This would lower the impact on both the environment and how well the product could sustain itself. We also considered the water detection to ensure accuracy so that water was not wasted. The sensors and system would minimize water waste by only watering when needed and at appropriate times before or after sunshine.\\
 
-In a broader sense, our project will increase the wellbeing of people’s lives, producing new plants and possibly food. One obstacle to sustainability is power storage. Our system uses a solar panel to collect energy, but that energy needs to be stored in order to distribute it in the right amounts and at the right times. We will be selecting our battery carefully and minimizing the waste of this as much as possible.
+In a broader sense, our project would increase the wellbeing of people’s lives, producing new plants and possibly food. One obstacle to sustainability was power storage. Our system used a solar panel to collect energy, but that energy needed to be stored in order to distribute it in the right amounts and at the right times. We would be selecting our battery carefully and minimizing the waste of this as much as possible.\\
