--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -13,24 +13,24 @@ room temperature (77 $\degree$F).
 
 \paragraph{General Requirements} The system is able to accept a voltage
 of -0.5 to 3.8 V into V\textsubscript{BAT}, -0.5 to 4.3 V into any digital
-IO-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
+I/O-configured pin, -0.5 to 2.1 V into any RF-configured pin, and -0.5 to 2.1 V
 into any analog-configured pin without damage. The system is able to
 accept a current of 0 to 620 mA into any pin without damage. The system shall
 be able to regulate voltage going into V\textsubscript{BAT}, and provide 3.3 $\pm$ 0.3 V
-on its 3V3 rail to any components in the sensing
+on its 3.3 V rail to any components in the sensing
 subsystem that may require it.
-\subparagraph{Results} Verified via Texas Instruments' documentation.
+\subparagraph{Results} The system was verified to be able to take between 0 V and 3.3 V into any digital I/O-configured pin. Because the CC3220MODAS has an integrated antenna, RF pins were not configured by the developers and did not need to be tested against this standard. The MCU was not configured for any analog I/O, and this requirement did not need to be tested against this standard. The system was able to accept 625 mA without damage during integration testing. The system was able to internally regulate voltage going into V\textsubscript{BAT} to 3.3 V, and the power subsystem successfully regulated the 3.3 V rail for any devices using it.
 
 \paragraph{Operating Temperature} The system is able to operate
 nominally within the temperature range of 30 to 140 $\degree$F. Crystal
 oscillators shall fall within the thermal drift ratings provided in the
 MCU technical reference material.
-\subparagraph{Results} Verified via Texas Instruments' documentation.
+\subparagraph{Results} The system was verified to operate at room temperature. Because the CC3220MODAS is a module component with encapsulated components, our team accepted Texas Instruments' operating temperatures specification listed in the CC3220MODAS datasheet as being sufficient to verify the system is able to operate under the test conditions. Texas Instruments lists the operating temperature of the CC3220MODAS as falling between -40 to 185 $\degree$F.
 
 \paragraph{Shutdown Power Draw} The system shall not draw more than 10
 $\upmu$A in shut down mode. The system shall not consume more than 100
 $\upmu$W in shut down mode.
-\subparagraph{Results} Because power is completely cut off to the system to initiate shutdown mode, no power is drawn from the system. This has been verified.
+\subparagraph{Results} Because power is cut off to the system to initiate shutdown mode, no power is drawn from the system. This has been verified.
 
 \paragraph{Active Power Draw} The system shall not draw more than 150 mA while
 receiving or idling in active mode, and shall not draw more than 300
@@ -39,19 +39,19 @@ than 750 mW while receiving or idling in active mode, and shall not
 consume more than 1.50 W while transmitting in active mode. The system
 is able to sufficiently power any components in the sensing subsystem in
 active mode.
-\subparagraph{Results} The system is able to sufficiently power other components and subsystems during normal operation.
+\subparagraph{Results} Although the exact metrics are unverified, the power subsystem is able to sufficiently power the components and subsystems during normal operation. Generally, the MCU has no bearing on whether devices are sufficiently powered, and the power draw by other devices is limited only by the power subsystem and the physical connections.
 
 \paragraph{Startup Power Draw} The system shall not draw more than 750 mA
 within the first 20 seconds of powering on or starting up the system. The
 system shall not consume more than 4.00 W within the first 20 seconds of
 powering on or starting up the system.
-\subparagraph{Results} Unverified.
+\subparagraph{Results} The results of this test are unverified. However, it is unlikely that the system consumes more than $\frac{4.00 \mathrm{W}}{3.30 \mathrm{V}} = 1.21 \mathrm{A}$ of current on startup. Per the CC3220MODAS datasheet, peak calibration current at $V\textsubscript{BAT} = 3.3 \mathrm{V}$ is typically 450 mA.
 
 \paragraph{Solar Panels and Battery System} The system is able to
 operate nominally solely powered off of the solar and battery subsystem
 detailed in \autoref{sec:power_subsystem}. The system shall not require any
 external power to operate in any modes (e.g. startup, active, etc.).
-\subparagraph{Results} Moot, as our product moved to being an AC-line powered system.
+\subparagraph{Results} This metric is moot, as our product moved to being an AC-line powered system. Whether our system is powered off of a solar and battery configuration, or an AC/DC converter configuration, it is still up to the power subsystem to regulate power and supply 3.3 V, 5 V, and 12 V with a sufficient amount of power available.
 
 % Hardware behavior (ability to set and use peripherals n stuff)
 \subsubsection{Hardware Behavior}
@@ -68,16 +68,16 @@ successfully upload programming that allows and/or performs unit testing
 (as detailed in this section, \autoref{sec:controller_subsystem_testing}).
 Programming uploaded to the MCU shall execute either upon powering the
 system, upon command, or when executing an ISR to start up the system.
-\subparagraph{Results} Verified.
+\subparagraph{Results} The developers were able to flash programming to CC3220MODAS module on the microcontroller PCB v2.0 via TI Code Composer Studio and TI UniFlash. This programming could either be emulated via JTAG on the XDS110 Debugger, or fully flashed into memory and ran by the MCU itself. 
 
 \paragraph{I2C} The developers is able to initialize I2C. I2C shall
 function nominally if used for communication with any other modules in the
 overall garden bed system.
-\subparagraph{Results} Verified.
+\subparagraph{Results} I2C was successfully initialized. The addresses of the components used (ADC, charge controller) were verified to correspond to the correct component, and the devices responded to a general call. The ADC on the sensing subsystem successfully communicated correct values back to the MCU via the I2C bus.
 
 \paragraph{Onboard LEDs} The system is able to make use of its onboard
 LEDs for notifying the user or developers of system states according to the specification in \autoref{sec:controller_subsystem}.
-\subparagraph{Results} Verified.
+\subparagraph{Results} While the LED configuration is not consistent with \autoref{sec:controller_subsystem}, the developer was able to configure the LEDs to indicate which actions the product is performing. The green LED is solidly on while the system is on and executing code. The red LED is on while the system is first initializing, and turns off when it's done. The yellow LED comes on while the system is performing spectral measurements, and turns off while it's not. No LEDs are illuminated while the system is off.
 
 \paragraph{WiFi Module} The WiFi module shall conform to the 802.11b/g/n
 standards. The developers is able to configure the WiFi
@@ -88,13 +88,13 @@ connect to either an open WLAN, or a WLAN secured by WPA2 (Personal or
 Enterprise). While
 connected, the WiFi module is capable of sending and receiving
 data at speeds of at least 10 kbps at least 80\% of the time.
-\subparagraph{Results} Verified.
+\subparagraph{Results} The NWP is able to broadcast in SSID in AP mode, and able to connect to a network in station mode. The NWP can be configured via SmartConfig or by accessing the WLAN's gateway while in AP mode. The integrated HTTP server is able to host an HTML page of our choice. Network speeds are unverified, as the wireless aspect of the project was not completely implemented.
 
 \paragraph{GPIO} The developers is able to configure the GPIO pins to
 the configurations available as described by technical reference documentation.
 The developers is able to set the state of the desired GPIO pins to
 the configurations available as described by technical reference documentation.
-\subparagraph{Results} The developers are able to configure GPIO pins to the configurations available as described by technical reference documentation via the Texas Instruments \href{https://www.ti.com/tool/SYSCONFIG}{SYSCONFIG} system configuration tool.
+\subparagraph{Results} The developers are able to configure GPIO pins to the configurations available as described by technical reference documentation via the Texas Instruments \href{https://www.ti.com/tool/SYSCONFIG}{SYSCONFIG} system configuration tool. GPIO actions were tested verified to work, with the exception of GPIO \texttt{BIN1}. This GPIO was able to be initialized and toggled, but it did not go to the full 3.3 V required of digital I/O.
 
 \paragraph{Interrupts/ISRs} The developers is able to configure
 the interrupts available on the MCU as described by technical reference
@@ -110,7 +110,7 @@ The ADC is able to accurately measure a voltage level down to a
 resolution of $\leq$1 mV. The ADC is able to measure at a sampling rate
 of $\geq$50 kilosamples per second per channel. The ADC shall support
 conversion on up to 2 channels. 
-\subparagraph{Results} Verified.
+\subparagraph{Results} The external ADC was able to be configured to high-precision mode to take 16-bit measurements from both channels. The ADC is able to sucessfully measure signals between 0 and 3.3 V. The ADC has a resolution of as little as 50 $\upmu$V. The ADC is able to measure at 140ksps in normal operating mode---since high-precision mode was used, the ADC is only able to measure at 8750 sps. While this does not meet our testing requirements, this is plenty enough for our needs, as the motor does not step fast enough to saturate our 8750 sps. The ADC is verified to support 2 channels.
 
 \paragraph{Startup} The system shall not take longer than 10 seconds to begin
 its programming upon sufficient power delivery to the MCU as described by
@@ -119,16 +119,16 @@ the programmed startup sequence unless interrupted to do so, or if given
 sufficient power as described by the by the technical reference documentation
 after being shut down.
 \subparagraph{Results} The system does not take longer than 10 seconds to begin
-its programming upon sufficient power delivery to the MCU. The system does not perform
+its programming upon sufficient power delivery to the MCU (it takes approximately 2 seconds). The system does not perform
 the programmed startup sequence unless the parameters described above are met.
 
 \paragraph{Processor} The central processor of the MCU shall maintain at
 least a 20 MHz clock speed while in active mode.
-\subparagraph{Results} The central processor of the MCU is able to maintain an 80 MHz clock speed while in active mode.
+\subparagraph{Results} The central processor of the MCU maintains an 80 MHz clock speed while in active mode.
 
 \paragraph{Memory} The programming uploaded to the MCU shall not take up
 more than 64 KB of space in memory.
-\subparagraph{Results} Verified.
+\subparagraph{Results} Due to the large hardware abstraction layer and the large amount of stack space allocated, our product fails this test. The program for the system takes up 126 KB of space in memory. However if we only consider heap space allocation for this program, then our system passes this test. 32 KB of memory are allocated for the program heap, and only 28 KB were allocated by the developers for use.
 
 % Software behavior (actual program)
 \subsubsection{Software Behavior} The MCU subsystem shall pass the following
@@ -136,7 +136,7 @@ tests related to use of the MCU to support application of the product. The
 programming developed and test the below criteria is intended to be the
 product software build.
 
-\paragraph{Startup} The microcontroller ishave according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
+\paragraph{Startup} The microcontroller behaves according to the specifications on startup in \autoref{sec:controller_subsystem} during its startup sequence.
 \subparagraph{Results} Verified.
 
 \paragraph{Shutdown} The microcontroller ishave according to the specifications on shutdown in \autoref{sec:controller_subsystem} during its shutdown sequence.
